chore: remove sass, minor tweaks

--- a/index.css
+++ b/index.css
@@ -1,1 +1,1 @@
-.arnoson-forms-preview{pointer-events:none}.arnoson-forms-preview.required .k-field-label:after{content:"*";padding-left:.25rem;color:var(--color-gray-500)}
+.kf-field-preview{pointer-events:none}.kf-field-preview.required .k-field-label:after{content:"✶";font-size:var(--text-xs);color:var(--color-gray-500);margin-left:var(--spacing-1)}.kf-field-preview .k-field-label:before{position:absolute;right:0;content:var(--kf-field-name);color:var(--color-gray-500);font-weight:400}.kf-field-identifier button{height:auto}
